--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/main.css">
 </head>
+
 <body>
-    Работает
+    <div class="main-page">
+        <canvas id="game-space" width="896" height="640">
+
+        </canvas>
+    </div>
 </body>
+<script src="js/Map.js"></script>
+<script src="js/gameObjects.js"></script>
+<script src="js/main.js"></script>
 </html>
