--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body>
-    <div class="main-page">
-        <canvas id="game-space" width="896" height="640">
-
-        </canvas>
-    </div>
+    <header>
+        <div class="nav">
+            <ul class="menu">
+                <li><a href="/game.html">Игра</a></li>
+            </ul>
+        </div>
+    </header>
+    
 </body>
-<script src="js/Map.js"></script>
-<script src="js/gameObjects.js"></script>
-<script src="js/main.js"></script>
+
 </html>
